# deadbeef-mpris2-plugin

./: .gitignore  Makefile.am  README  configure.ac
src/: artwork.h  logging.c  logging.h  mpris.c  mprisServer.c  mprisServer.h
